--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
         </div>
 
         <div id="toast-con" class="toast-con">
-          <div class="toast">file saved</div>
         </div>
     <script>
       // You can also require other files to run in this process
-      require('./renderer.js')
+      require('./src/renderer.js')
     </script>
   </body>
 </html>
